tests/baselines/reference/destructuringThisWithProperty.errors.txt
tests/cases/compiler/destructuringThisWithProperty.ts(4,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/destructuringThisWithProperty.ts(14,15): error TS2339: Property 'bar' does not exist on type 'Omit<this, "bar" | "func">'.
tests/cases/compiler/destructuringThisWithProperty.ts(15,15): error TS2339: Property 'bar' does not exist on type '{ foo: string; }'.
tests/cases/compiler/destructuringThisWithProperty.ts(16,15): error TS2339: Property 'bar' does not exist on type 'Omit<this, "foo" | "bar" | "func">'.
tests/cases/compiler/destructuringThisWithProperty.ts(17,15): error TS2339: Property 'bar' does not exist on type '{}'.
tests/cases/compiler/destructuringThisWithProperty.ts(19,15): error TS2339: Property 'func' does not exist on type 'Omit<this, "bar" | "func">'.
tests/cases/compiler/destructuringThisWithProperty.ts(20,15): error TS2339: Property 'func' does not exist on type '{ foo: string; }'.
tests/cases/compiler/destructuringThisWithProperty.ts(21,15): error TS2339: Property 'func' does not exist on type 'Omit<this, "foo" | "bar" | "func">'.
tests/cases/compiler/destructuringThisWithProperty.ts(22,15): error TS2339: Property 'func' does not exist on type '{}'.
tests/cases/compiler/destructuringThisWithProperty.ts(32,11): error TS2339: Property 'bar' does not exist on type 'Omit<T, "bar" | "func">'.
tests/cases/compiler/destructuringThisWithProperty.ts(33,11): error TS2339: Property 'bar' does not exist on type '{ foo: string; }'.
tests/cases/compiler/destructuringThisWithProperty.ts(34,11): error TS2339: Property 'bar' does not exist on type 'Omit<T, "foo" | "bar" | "func">'.
tests/cases/compiler/destructuringThisWithProperty.ts(35,11): error TS2339: Property 'bar' does not exist on type '{}'.
tests/cases/compiler/destructuringThisWithProperty.ts(37,11): error TS2339: Property 'func' does not exist on type 'Omit<T, "bar" | "func">'.
tests/cases/compiler/destructuringThisWithProperty.ts(38,11): error TS2339: Property 'func' does not exist on type '{ foo: string; }'.
tests/cases/compiler/destructuringThisWithProperty.ts(39,11): error TS2339: Property 'func' does not exist on type 'Omit<T, "foo" | "bar" | "func">'.
tests/cases/compiler/destructuringThisWithProperty.ts(40,11): error TS2339: Property 'func' does not exist on type '{}'.


==== tests/cases/compiler/destructuringThisWithProperty.ts (17 errors) ====
    class A {
        constructor(public foo: string) {}
    
        get bar(): number {
            ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 1;
        }
    
        func() {
            const {           ...rest1 } = this;
            const {           ...rest2 } = this as A;
            const { foo: _f1, ...rest3 } = this;
            const { foo: _f2, ...rest4 } = this as A;
    
            rest1.bar;
                  ~~~
!!! error TS2339: Property 'bar' does not exist on type 'Omit<this, "bar" | "func">'.
            rest2.bar;
                  ~~~
!!! error TS2339: Property 'bar' does not exist on type '{ foo: string; }'.
            rest3.bar;
                  ~~~
!!! error TS2339: Property 'bar' does not exist on type 'Omit<this, "foo" | "bar" | "func">'.
            rest4.bar;
                  ~~~
!!! error TS2339: Property 'bar' does not exist on type '{}'.
    
            rest1.func;
                  ~~~~
!!! error TS2339: Property 'func' does not exist on type 'Omit<this, "bar" | "func">'.
            rest2.func;
                  ~~~~
!!! error TS2339: Property 'func' does not exist on type '{ foo: string; }'.
            rest3.func;
                  ~~~~
!!! error TS2339: Property 'func' does not exist on type 'Omit<this, "foo" | "bar" | "func">'.
            rest4.func;
                  ~~~~
!!! error TS2339: Property 'func' does not exist on type '{}'.
        }
    }
    
    function destructure<T extends A>(x: T) {
        const {           ...rest1 } = x;
        const {           ...rest2 } = x as A;
        const { foo: _f1, ...rest3 } = x;
        const { foo: _f2, ...rest4 } = x as A;
    
        rest1.bar;
              ~~~
!!! error TS2339: Property 'bar' does not exist on type 'Omit<T, "bar" | "func">'.
        rest2.bar;
              ~~~
!!! error TS2339: Property 'bar' does not exist on type '{ foo: string; }'.
        rest3.bar;
              ~~~
!!! error TS2339: Property 'bar' does not exist on type 'Omit<T, "foo" | "bar" | "func">'.
        rest4.bar;
              ~~~
!!! error TS2339: Property 'bar' does not exist on type '{}'.
    
        rest1.func;
              ~~~~
!!! error TS2339: Property 'func' does not exist on type 'Omit<T, "bar" | "func">'.
        rest2.func;
              ~~~~
!!! error TS2339: Property 'func' does not exist on type '{ foo: string; }'.
        rest3.func;
              ~~~~
!!! error TS2339: Property 'func' does not exist on type 'Omit<T, "foo" | "bar" | "func">'.
        rest4.func;
              ~~~~
!!! error TS2339: Property 'func' does not exist on type '{}'.
    }
    